force-app/main/default/objects/LLC_BI__Loan_Collateral_Aggregate__c/LLC_BI__Loan_Collateral_Aggregate__c.object-meta.xml
<CustomObject>
    <description>Contains the rollup fields from the Loan Collateral object. They are not on the Loan object because there is a limit of 10 rollups per object.</description>
    <label>Loan Collateral Aggregate</label>
    <nameField>
        <label>Loan Collateral Aggregate</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Collateral Aggregate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>