force-app/main/default/objects/LLC_BI__Loan_Collateral_Aggregate__c/fields/LLC_BI__Collateral_Pledged_Count__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Pledged_Count__c</fullName>
    <description>Automatically calculated. The number of Collateral Pledged Records.</description>
    <inlineHelpText>Number of Collateral Pledged Records</inlineHelpText>
    <label>Collateral Pledged Count</label>
    <summaryFilterItems>
        <field>LLC_BI__Loan_Collateral2__c.LLC_BI__Is_Collateral_Count_Rollup_Eligible__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>