force-app/main/default/objects/LLC_BI__Loan_Collateral_Aggregate__c/fields/LLC_BI__Current_Total_Lendable_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Current_Total_Lendable_Value__c</fullName>
    <description>Automatically calculated. The sum of all collateral lendable value.</description>
    <inlineHelpText>Sum of all collateral lendable value</inlineHelpText>
    <label>Current Total Lendable Value</label>
    <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Current_Lendable_Value__c</summarizedField>
    <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>