force-app/main/default/objects/LLC_BI__Loan_Collateral_Aggregate__c/fields/LLC_BI__Total_Collateral_Pledged__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Collateral_Pledged__c</fullName>
    <description>Automatically calculated. The total amount of collateral pledged against the loan.</description>
    <inlineHelpText>The total amount of collateral pledged against the loan</inlineHelpText>
    <label>Total Collateral Pledged</label>
    <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Amount_Pledged__c</summarizedField>
    <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>