force-app/main/default/objects/LLC_BI__Loan_Collateral_Aggregate__c/fields/LLC_BI__Total_Collateral_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Collateral_Value__c</fullName>
    <description>Automatically calculated. The combined value of all collateral on the loan.</description>
    <inlineHelpText>The combined value of all collateral on the loan</inlineHelpText>
    <label>Total Collateral Value</label>
    <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Collateral_Value__c</summarizedField>
    <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>