force-app/main/default/objects/LLC_BI__Loan_Collateral_Aggregate__c/fields/LLC_BI__Total_Current_Lien_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Current_Lien_Amount__c</fullName>
    <description>Automatically calculated. The sum of all Liens associated with the loan.</description>
    <inlineHelpText>Sum of all Liens associated with the loan</inlineHelpText>
    <label>Total Current Lien Amount</label>
    <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Total_Prior_Lien_Amount__c</summarizedField>
    <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>