force-app/main/default/objects/LLC_BI__Loan_Collateral_Aggregate__c/fields/LLC_BI__Total_Superior_Lien_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Superior_Lien_Amount__c</fullName>
    <description>Automatically calculated. The total amount of all liens with a higher position.</description>
    <label>Total Superior Lien Amount</label>
    <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Total_Superior_Lien_Amount__c</summarizedField>
    <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>